(lang dune 2.9)

(implicit_transitive_deps false)

(name swhid_core)

(license ISC)

(authors "Léo Andrès <contact@ndrs.fr>")

(maintainers "Léo Andrès <contact@ndrs.fr>")

(source
 (uri git+https://git.zapashcanon.fr/zapashcanon/swhid_core.git))

(homepage https://git.zapashcanon.fr/zapashcanon/swhid_core)

(bug_reports https://git.zapashcanon.fr/zapashcanon/swhid_core/issues)

(documentation https://doc.zapashcanon.fr/swhid_core)

(generate_opam_files true)

(package
 (name swhid_core)
 (synopsis "OCaml library/executable to TODO")
 (description
  "swhid_core is an OCaml library/executable to TODO.")
 (tags
  (swhid_core TODO TODO TODO TODO))
 (depends
  (ocaml
   (>= 4.08))))
