(* -*- tuareg -*- *)

open Jbuild_plugin.V1

let version = Scanf.sscanf ocaml_version "%u.%u" (fun a b -> (a, b))
let () =
  Printf.ksprintf send
  begin if version >= (4, 08) then
{|
(library
 (public_name swhid_core)
 (modules compute object))
|}
  else
{|
(library
 (public_name swhid_core)
 (modules compute object result)
 (private_modules result))
|}
  end
